--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description">
   <title>Player Scouting Recommendation System</title>
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
@@ -112,7 +113,7 @@
     <div class="news-container">
       <div class="boxes">
         <div class="box">
-          <div class="image"><img src="assets/imgs/Main/palmer.webp" /></div>
+          <div class="image"><img loading="lazy" alt="news-image" src="assets/imgs/Main/palmer.webp" /></div>
           <h3>
             Cole Palmer's insane records, Bukayo Saka hits the Jackpot, and a
             story discovered with SCOUTED stats
@@ -121,7 +122,7 @@
         </div>
         <div class="box">
           <div class="image">
-            <img src="assets/imgs/Main/arsvsche.webp" />
+            <img loading="lazy" alt="news-image" src="assets/imgs/Main/arsvsche.webp" />
           </div>
           <h3>
             SCOUTED50 2024/25: A definitive guide to the next generation
@@ -129,7 +130,7 @@
           <p>50 breakout talents to watch in the 2024/25 season.</p>
         </div>
         <div class="box">
-          <div class="image"><img src="assets/imgs/Main/uzbk.webp" /></div>
+          <div class="image"><img loading="lazy" alt="news-image" src="assets/imgs/Main/uzbk.webp" /></div>
           <h3>
             The most fascinating U23 players in Europe's Big Five Leagues:
             from an Uzbek mind-reader to a Moroccan marvel
@@ -140,7 +141,7 @@
           </p>
         </div>
         <div class="box">
-          <div class="image"><img src="assets/imgs/Main/barca.webp" /></div>
+          <div class="image"><img loading="lazy" alt="news-image" src="assets/imgs/Main/barca.webp" /></div>
           <h3>
             The new Power Forwards, Gvardiol’s secret weapon and Barça’s
             superhuman duo
@@ -151,7 +152,7 @@
           </p>
         </div>
         <div class="box">
-          <div class="image"><img src="assets/imgs/Main/aston.webp" /></div>
+          <div class="image"><img loading="lazy" alt="news-image" src="assets/imgs/Main/aston.webp" /></div>
           <h3>
             Jhon Durán destroys xG, Amad does aMadness, and SCOUTED stats
           </h3>
@@ -161,7 +162,7 @@
           </p>
         </div>
         <div class="box">
-          <div class="image"><img src="assets/imgs/Main/gavi.webp" /></div>
+          <div class="image"><img loading="lazy" alt="news-image" src="assets/imgs/Main/gavi.webp" /></div>
           <h3>
             Gavi is so back, record-chasing title challengers, and a
             left-footed Saliba regen
@@ -169,12 +170,12 @@
           <p>Ann Perkins is right.</p>
         </div>
         <div class="box">
-          <div class="image"><img src="assets/imgs/Main/clai.webp" /></div>
+          <div class="image"><img loading="lazy" alt="news-image" src="assets/imgs/Main/clai.webp" /></div>
           <h3>The Shortlist: Riccardo Calafiori</h3>
           <p>A coveted, pressure-killing centre-back for your shortlists.</p>
         </div>
         <div class="box">
-          <div class="image"><img src="assets/imgs/Main/henry.webp" /></div>
+          <div class="image"><img loading="lazy" alt="news-image" src="assets/imgs/Main/henry.webp" /></div>
           <h3>Mind Games</h3>
           <p>Why we get players wrong (and how to get them right)</p>
         </div>
@@ -196,7 +197,7 @@
           <div class="timeline-start md:text-end mb-10">
             <div class="text-lg font-black text-white">Scouting Support Tool</div>
             An advanced scouting support tool, driven by Generative AI, capable of processing large volumes of information and creating automated reports and shortlists of ideal profiles based on requirements.
-            <img class="p-0" src="assets/imgs/Main/aida.webp" alt="" />
+            <img loading="lazy" alt="timeline-image" class="p-0" src="assets/imgs/Main/aida.webp" />
           </div>
           <hr />
         </li>
@@ -212,7 +213,7 @@
           <div class="timeline-end mb-10">
             <div class="text-lg font-black text-white">Predictive Analytics at Scale</div>
             All-in-one analytics platform for youth sector teams, offering user-friendly insights into performance, tactics, and talent development. The video tagging software leverages computer vision technology to analyze footage, providing detailed metrics on team performance. Advanced wearable devices offer real-time monitoring, enabling precise tracking for optimal training and performance enhancement.
-            <img class="p-0" src="assets/imgs/Main/player-analysis.webp" alt="" />
+            <img loading="lazy" alt="timeline-image" class="p-0" src="assets/imgs/Main/player-analysis.webp" />
           </div>
           <hr />
         </li>
@@ -228,7 +229,7 @@
           <div class="timeline-start md:text-end mb-10">
             <div class="text-lg font-black text-white">Automated Team Reporting</div>
             Evaluate your team or opponents' performance over the season. Delve deep into every aspect of play, from overall results to expert analysis of offensive, defensive, and set-piece strategies, complemented by individual player performance evaluations.
-            <img class="p-0" src="assets/imgs/Main/team.webp" alt="" />
+            <img loading="lazy" alt="timeline-image" class="p-0" src="assets/imgs/Main/team.webp" />
           </div>
           <hr />
         </li>
@@ -244,7 +245,7 @@
           <div class="timeline-end mb-10">
             <div class="text-lg font-black text-white">Automated Player Reporting</div>
             Analyze historical performance with in-depth reports on positional changes, playing time, and key contributions. Explore detailed metrics, charts, and role effectiveness across all aspects of play, from defense to offense, showcasing player consistency and adaptability.
-            <img class="p-0" src="assets/imgs/Main/player.webp" alt="" />
+            <img loading="lazy" alt="timeline-image" class="p-0" src="assets/imgs/Main/player.webp" />
           </div>
           <hr />
         </li>
@@ -260,7 +261,7 @@
           <div class="timeline-start md:text-end mb-10">
             <div class="text-lg font-black text-white">Overview & Stats</div>
             Summary and key statistics for individual players, including performance metrics, game contributions, and historical data.
-            <img class="p-0" src="assets/imgs/Main/overview-stats.webp" alt="" />
+            <img loading="lazy" alt="timeline-image" class="p-0" src="assets/imgs/Main/overview-stats.webp" />
           </div>
           <hr />
         </li>
@@ -276,7 +277,7 @@
           <div class="timeline-end mb-10">
             <div class="text-lg font-black text-white">Elevate you decision-making</div>
             An advanced scouting support tool, driven by Generative AI, capable of processing large volumes of information and creating automated reports and shortlists of ideal profiles based on requirements.
-            <img class="p-0" src="assets/imgs/Main/decision-scouting.webp" alt="" />
+            <img loading="lazy" alt="timeline-image" class="p-0" src="assets/imgs/Main/decision-scouting.webp" />
           </div>
           <hr />
         </li>
@@ -292,7 +293,7 @@
           <div class="timeline-start md:text-end mb-10">
             <div class="text-lg font-black text-white">Player Clustering Model</div>
             Leverage our unique clustering model to analyze players, providing advanced metrics that reveal underlying patterns and functions.
-            <img class="p-0" src="assets/imgs/Main/clustering-scouting.webp" alt="" />
+            <img loading="lazy" alt="timeline-image" class="p-0" src="assets/imgs/Main/clustering-scouting.webp" />
           </div>
           <hr />
         </li>
