--- a/Filter.html
+++ b/Filter.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description">
     <title>Filter Players</title>
     <link rel="stylesheet" href="assets/css/services.css" />
     <link rel="icon" href="assets/imgs/Main/logo.png">
