--- a/club-details.html
+++ b/club-details.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description">
     <title>Club Details</title>
     <!-- Include PapaParse for CSV parsing -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
@@ -19,7 +20,7 @@
             <div class="club-header">
                 <div class="left-side">
                     <div class="club-details">
-                        <img id="clubLogo" src="assets/imgs/logos/placeholder.png" alt="Club Logo" class="club-logo">
+                        <img loading="lazy" id="clubLogo" src="assets/imgs/logos/placeholder.png" alt="Club Logo" class="club-logo">
                         <div class="club-details-text">
                             <h1 id="clubName"></h1>
                             <p id="clubLeague"></p>
