--- a/clubs.html
+++ b/clubs.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description">
     <title>Club Page</title>
     <link rel="stylesheet" href="assets/css/clubs.css">
     <link rel="icon" href="assets/imgs/Main/logo.png">
