--- a/player-details.html
+++ b/player-details.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description">
     <title>Player Details</title>
     <link rel="stylesheet" href="assets/css/PlayerDetails.css" />
     <link rel="icon" href="assets/imgs/Main/logo.png">
@@ -24,7 +25,7 @@
                     </div>
                 </div>
                 <div class="R-side">
-                    <img id="playerImage" src="" alt="Player Image" class="player-image" />
+                    <img loading="lazy" id="playerImage" src="" alt="Player Image" class="player-image" />
                 </div>
             </div>
 
