--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <div class="landing" id="landing">
+  <section class="landing" id="landing">
     <ul class="navigation">
       <li><a class="navlink" href="#">Home</a></li>
       <li><a class="navlink" href="#news">News</a></li>
@@ -25,11 +25,11 @@
       <li><a class="navlink" href="Filter.html">Services</a></li>
       <div class="toggleMenu"></div>
     </ul>
-    <div class="bg">
+    <section class="bg">
       <div></div>
       <div></div>
-    </div>
-    <div class="header-text" aria-hidden="true">
+    </section>
+    <section class="header-text" aria-hidden="true">
       <span class="glow-filter" data-text="The Scouting App">The Scouting App</span><br />
       Take Scouting<br />Analysis to the next level
 
@@ -42,7 +42,7 @@
         player within your database. ensures to always lead you to the best
         scouting and managerial decisions.
       </p>
-    </div>
+    </section>
 
     <svg class="filters" width="1440px" height="300px" viewBox="0 0 1440 300" xmlns="http://www.w3.org/2000/svg"
       xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -107,30 +107,30 @@
         </filter>
       </defs>
     </svg>
-  </div>
+  </section>
 
   <section class="news" id="news">
-    <div class="news-container">
-      <div class="boxes">
-        <div class="box">
-          <div class="image"><img loading="lazy" alt="news-image" src="assets/imgs/Main/palmer.webp" /></div>
+    <section class="news-container">
+      <section class="boxes">
+        <section class="box">
+          <section class="image"><img loading="lazy" alt="news-image" src="assets/imgs/Main/palmer.webp" /></section>
           <h3>
             Cole Palmer's insane records, Bukayo Saka hits the Jackpot, and a
             story discovered with SCOUTED stats
           </h3>
           <p></p>
-        </div>
-        <div class="box">
-          <div class="image">
+        </section>
+        <section class="box">
+          <section class="image">
             <img loading="lazy" alt="news-image" src="assets/imgs/Main/arsvsche.webp" />
-          </div>
+          </section>
           <h3>
             SCOUTED50 2024/25: A definitive guide to the next generation
           </h3>
           <p>50 breakout talents to watch in the 2024/25 season.</p>
-        </div>
-        <div class="box">
-          <div class="image"><img loading="lazy" alt="news-image" src="assets/imgs/Main/uzbk.webp" /></div>
+        </section>
+        <section class="box">
+          <section class="image"><img loading="lazy" alt="news-image" src="assets/imgs/Main/uzbk.webp" /></section>
           <h3>
             The most fascinating U23 players in Europe's Big Five Leagues:
             from an Uzbek mind-reader to a Moroccan marvel
@@ -139,9 +139,9 @@
             You know when Gary Neville and Jamie Carragher sit down and do
             their Team of the Season? This is that.
           </p>
-        </div>
-        <div class="box">
-          <div class="image"><img loading="lazy" alt="news-image" src="assets/imgs/Main/barca.webp" /></div>
+        </section>
+        <section class="box">
+          <section class="image"><img loading="lazy" alt="news-image" src="assets/imgs/Main/barca.webp" /></section>
           <h3>
             The new Power Forwards, Gvardiol’s secret weapon and Barça’s
             superhuman duo
@@ -150,9 +150,9 @@
             Monday Night SCOUTED: And just like that, another international
             break begins.
           </p>
-        </div>
-        <div class="box">
-          <div class="image"><img loading="lazy" alt="news-image" src="assets/imgs/Main/aston.webp" /></div>
+        </section>
+        <section class="box">
+          <section class="image"><img loading="lazy" alt="news-image" src="assets/imgs/Main/aston.webp" /></section>
           <h3>
             Jhon Durán destroys xG, Amad does aMadness, and SCOUTED stats
           </h3>
@@ -160,146 +160,146 @@
             Monday Night SCOUTED: dread it, run from it, Jake arrives all the
             same
           </p>
-        </div>
-        <div class="box">
-          <div class="image"><img loading="lazy" alt="news-image" src="assets/imgs/Main/gavi.webp" /></div>
+        </section>
+        <section class="box">
+          <section class="image"><img loading="lazy" alt="news-image" src="assets/imgs/Main/gavi.webp" /></section>
           <h3>
             Gavi is so back, record-chasing title challengers, and a
             left-footed Saliba regen
           </h3>
           <p>Ann Perkins is right.</p>
-        </div>
-        <div class="box">
-          <div class="image"><img loading="lazy" alt="news-image" src="assets/imgs/Main/clai.webp" /></div>
+        </section>
+        <section class="box">
+          <section class="image"><img loading="lazy" alt="news-image" src="assets/imgs/Main/clai.webp" /></section>
           <h3>The Shortlist: Riccardo Calafiori</h3>
           <p>A coveted, pressure-killing centre-back for your shortlists.</p>
-        </div>
-        <div class="box">
-          <div class="image"><img loading="lazy" alt="news-image" src="assets/imgs/Main/henry.webp" /></div>
+        </section>
+        <section class="box">
+          <section class="image"><img loading="lazy" alt="news-image" src="assets/imgs/Main/henry.webp" /></section>
           <h3>Mind Games</h3>
           <p>Why we get players wrong (and how to get them right)</p>
-        </div>
-      </div>
-    </div>
+        </section>
+      </section>
+    </section>
   </section>
 
   <section class="timeline" id="timeline">
-    <div class="md:mx-32 pb-24 mx-2">
+    <section class="md:mx-32 pb-24 mx-2">
       <ul class="timeline timeline-snap-icon max-md:timeline-compact timeline-vertical">
         <li id="1820">
-          <div class="timeline-middle">
+          <section class="timeline-middle">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="h-5 w-5">
               <path fill-rule="evenodd"
                 d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z"
                 clip-rule="evenodd" />
             </svg>
-          </div>
-          <div class="timeline-start md:text-end mb-10">
-            <div class="text-lg font-black text-white">Scouting Support Tool</div>
+          </section>
+          <section class="timeline-start md:text-end mb-10">
+            <section class="text-lg font-black text-white">Scouting Support Tool</section>
             An advanced scouting support tool, driven by Generative AI, capable of processing large volumes of information and creating automated reports and shortlists of ideal profiles based on requirements.
             <img loading="lazy" alt="timeline-image" class="p-0" src="assets/imgs/Main/aida.webp" />
-          </div>
+          </section>
           <hr />
         </li>
         <li>
           <hr />
-          <div class="timeline-middle">
+          <section class="timeline-middle">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="h-5 w-5">
               <path fill-rule="evenodd"
                 d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z"
                 clip-rule="evenodd" />
             </svg>
-          </div>
-          <div class="timeline-end mb-10">
-            <div class="text-lg font-black text-white">Predictive Analytics at Scale</div>
+          </section>
+          <section class="timeline-end mb-10">
+            <section class="text-lg font-black text-white">Predictive Analytics at Scale</section>
             All-in-one analytics platform for youth sector teams, offering user-friendly insights into performance, tactics, and talent development. The video tagging software leverages computer vision technology to analyze footage, providing detailed metrics on team performance. Advanced wearable devices offer real-time monitoring, enabling precise tracking for optimal training and performance enhancement.
-            <img loading="lazy" alt="timeline-image" class="p-0" src="assets/imgs/Main/player-analysis.webp" />
-          </div>
+            <img loading="lazy" alt="timeline-image" class="p-0" src="assets/imgs/Main/player-analysis.webp" alt="news-image" />
+          </section>
           <hr />
         </li>
         <li>
           <hr />
-          <div class="timeline-middle">
+          <section class="timeline-middle">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="h-5 w-5">
               <path fill-rule="evenodd"
                 d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z"
                 clip-rule="evenodd" />
             </svg>
-          </div>
-          <div class="timeline-start md:text-end mb-10">
-            <div class="text-lg font-black text-white">Automated Team Reporting</div>
+          </section>
+          <section class="timeline-start md:text-end mb-10">
+            <section class="text-lg font-black text-white">Automated Team Reporting</section>
             Evaluate your team or opponents' performance over the season. Delve deep into every aspect of play, from overall results to expert analysis of offensive, defensive, and set-piece strategies, complemented by individual player performance evaluations.
-            <img loading="lazy" alt="timeline-image" class="p-0" src="assets/imgs/Main/team.webp" />
-          </div>
+            <img loading="lazy" alt="timeline-image" class="p-0" src="assets/imgs/Main/team.webp" alt="news-image" />
+          </section>
           <hr />
         </li>
         <li>
           <hr />
-          <div class="timeline-middle">
+          <section class="timeline-middle">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="h-5 w-5">
               <path fill-rule="evenodd"
                 d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z"
                 clip-rule="evenodd" />
             </svg>
-          </div>
-          <div class="timeline-end mb-10">
-            <div class="text-lg font-black text-white">Automated Player Reporting</div>
+          </section>
+          <section class="timeline-end mb-10">
+            <section class="text-lg font-black text-white">Automated Player Reporting</section>
             Analyze historical performance with in-depth reports on positional changes, playing time, and key contributions. Explore detailed metrics, charts, and role effectiveness across all aspects of play, from defense to offense, showcasing player consistency and adaptability.
-            <img loading="lazy" alt="timeline-image" class="p-0" src="assets/imgs/Main/player.webp" />
-          </div>
+            <img loading="lazy" alt="timeline-image" class="p-0" src="assets/imgs/Main/player.webp" alt="news-image" />
+          </section>
           <hr />
         </li>
         <li>
           <hr />
-          <div class="timeline-middle">
+          <section class="timeline-middle">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="h-5 w-5">
               <path fill-rule="evenodd"
                 d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z"
                 clip-rule="evenodd" />
             </svg>
-          </div>
-          <div class="timeline-start md:text-end mb-10">
-            <div class="text-lg font-black text-white">Overview & Stats</div>
+          </section>
+          <section class="timeline-start md:text-end mb-10">
+            <section class="text-lg font-black text-white">Overview & Stats</section>
             Summary and key statistics for individual players, including performance metrics, game contributions, and historical data.
-            <img loading="lazy" alt="timeline-image" class="p-0" src="assets/imgs/Main/overview-stats.webp" />
-          </div>
+            <img loading="lazy" alt="timeline-image" class="p-0" src="assets/imgs/Main/overview-stats.webp" alt="news-image" />
+          </section>
           <hr />
         </li>
         <li>
           <hr />
-          <div class="timeline-middle">
+          <section class="timeline-middle">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="h-5 w-5">
               <path fill-rule="evenodd"
                 d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z"
                 clip-rule="evenodd" />
             </svg>
-          </div>
-          <div class="timeline-end mb-10">
-            <div class="text-lg font-black text-white">Elevate you decision-making</div>
+          </section>
+          <section class="timeline-end mb-10">
+            <section class="text-lg font-black text-white">Elevate you decision-making</section>
             An advanced scouting support tool, driven by Generative AI, capable of processing large volumes of information and creating automated reports and shortlists of ideal profiles based on requirements.
-            <img loading="lazy" alt="timeline-image" class="p-0" src="assets/imgs/Main/decision-scouting.webp" />
-          </div>
+            <img loading="lazy" alt="timeline-image" class="p-0" src="assets/imgs/Main/decision-scouting.webp" alt="news-image" />
+          </section>
           <hr />
         </li>
         <li>
           <hr />
-          <div class="timeline-middle">
+          <section class="timeline-middle">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="h-5 w-5">
               <path fill-rule="evenodd"
                 d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z"
                 clip-rule="evenodd" />
             </svg>
-          </div>
-          <div class="timeline-start md:text-end mb-10">
-            <div class="text-lg font-black text-white">Player Clustering Model</div>
+          </section>
+          <section class="timeline-start md:text-end mb-10">
+            <section class="text-lg font-black text-white">Player Clustering Model</section>
             Leverage our unique clustering model to analyze players, providing advanced metrics that reveal underlying patterns and functions.
-            <img loading="lazy" alt="timeline-image" class="p-0" src="assets/imgs/Main/clustering-scouting.webp" />
-          </div>
+            <img loading="lazy" alt="timeline-image" class="p-0" src="assets/imgs/Main/clustering-scouting.webp" alt="news-image" />
+          </section>
           <hr />
         </li>
 
       </ul>
-    </div>
+    </section>
   </section>
 
   <footer id="footer">
