player-details.html

--- a/player-details.html
+++ b/player-details.html
@@ -12,49 +12,49 @@
 </head>
 
 <body>
-    <div class="BackBtn"><a href="Filter.html">Back</a></div>
-    <div class="container">
-        <div class="player-details" id="playerDetails">
+    <section class="BackBtn"><a href="Filter.html">Back</a></section>
+    <section class="container">
+        <section class="player-details" id="playerDetails">
             <p id="playerSeason"></p>
-            <div class="Head-details">
-                <div class="L-side">
+            <section class="Head-details">
+                <section class="L-side">
                     <h1 id="playerName">Loading...</h1>
-                    <div class="Logos">
+                    <section class="Logos">
                         <p id="playerLeague"></p>
                         <p id="playerTeam"></p>
-                    </div>
-                </div>
-                <div class="R-side">
+                    </section>
+                </section>
+                <section class="R-side">
                     <img loading="lazy" id="playerImage" src="" alt="Player Image" class="player-image" />
-                </div>
-            </div>
+                </section>
+            </section>
 
             <!-- Detailed Stats Section -->
-            <div class="detailed-stats"></div>
+            <section class="detailed-stats"></section>
 
             <!-- Main Stats Section -->
-            <div class="main-stats"></div>
+            <section class="main-stats"></section>
 
             <!-- Spider Chart Section -->
-            <div class="chart-container" id="ChartContainer">
-                <div class="ChartHolder">
+            <section class="chart-container" id="ChartContainer">
+                <section class="ChartHolder">
                     <canvas id="player-spider-chart"></canvas>
-                </div>
-                <div class="ChartHolder">
+                </section>
+                <section class="ChartHolder">
                     <canvas id="touches-bar-chart" style="width: 50%;"></canvas>
-                </div>
-            </div>
+                </section>
+            </section>
 
             <!-- Historical Performance Section -->
-            <div id="historical-performance-container">
+            <section id="historical-performance-container">
                 <h2>Historical Performance</h2>
-                <div id="radio-buttons-container"></div>
-                <div class="chart-container" id="ChartContainer">
+                <section id="radio-buttons-container"></section>
+                <section class="chart-container" id="ChartContainer">
                     <canvas id="line-chart"></canvas>
-                </div>
-            </div>
-        </div>
-    </div>
+                </section>
+            </section>
+        </section>
+    </section>
     <!-- Other scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
