club-details.html

--- a/club-details.html
+++ b/club-details.html
@@ -14,46 +14,46 @@
 </head>
 
 <body>
-    <div class="container" id="club-container">
+    <section class="container" id="club-container">
         <!-- Club Information -->
-        <div class="club-info">
-            <div class="club-header">
-                <div class="left-side">
-                    <div class="club-details">
+        <section class="club-info">
+            <section class="club-header">
+                <section class="left-side">
+                    <section class="club-details">
                         <img loading="lazy" id="clubLogo" src="assets/imgs/logos/placeholder.png" alt="Club Logo" class="club-logo">
-                        <div class="club-details-text">
+                        <section class="club-details-text">
                             <h1 id="clubName"></h1>
                             <p id="clubLeague"></p>
                             <p id="clubSeason"></p>
-                        </div>
-                    </div>
-                </div>
+                        </section>
+                    </section>
+                </section>
 
-                <div class="right-side">
-                    <div class="team-stats">
-                        <div class="stat-item">
+                <section class="right-side">
+                    <section class="team-stats">
+                        <section class="stat-item">
                             <span class="stat-label">Average Age</span>
                             <span class="stat-value" id="averageAge"></span>
-                        </div>
-                        <div class="stat-item">
+                        </section>
+                        <section class="stat-item">
                             <span class="stat-label">Total Goals</span>
                             <span class="stat-value" id="totalGoals"></span>
-                        </div>
-                        <div class="stat-item">
+                        </section>
+                        <section class="stat-item">
                             <span class="stat-label">Total Assists</span>
                             <span class="stat-value" id="totalAssists"></span>
-                        </div>
-                        <div class="stat-item">
+                        </section>
+                        <section class="stat-item">
                             <span class="stat-label">Total Pass Accuracy</span>
                             <span class="stat-value" id="totalPassAccuracy"></span>
-                        </div>
-                    </div>
-                </div>
-            </div>
+                        </section>
+                    </section>
+                </section>
+            </section>
             <!-- Player Rankings Tables -->
-            <div class="player-tables">
+            <section class="player-tables">
                 <!-- Passing Table -->
-                <div id="passingTable" class="ranking-table">
+                <section id="passingTable" class="ranking-table">
                     <h3>Passing</h3>
                     <table>
                         <thead>
@@ -71,10 +71,10 @@
                             </tr>
                         </tfoot>
                     </table>
-                </div>
+                </section>
 
                 <!-- Appearances Table -->
-                <div id="appearancesTable" class="ranking-table">
+                <section id="appearancesTable" class="ranking-table">
                     <h3>Appearances</h3>
                     <table>
                         <thead>
@@ -92,10 +92,10 @@
                             </tr>
                         </tfoot>
                     </table>
-                </div>
+                </section>
 
                 <!-- Minutes Played Table -->
-                <div id="minutesPlayedTable" class="ranking-table">
+                <section id="minutesPlayedTable" class="ranking-table">
                     <h3>Minutes Played</h3>
                     <table>
                         <thead>
@@ -113,10 +113,10 @@
                             </tr>
                         </tfoot>
                     </table>
-                </div>
+                </section>
 
                 <!-- Goals Table -->
-                <div id="goalsTable" class="ranking-table">
+                <section id="goalsTable" class="ranking-table">
                     <h3>Goals</h3>
                     <table>
                         <thead>
@@ -134,10 +134,10 @@
                             </tr>
                         </tfoot>
                     </table>
-                </div>
+                </section>
 
                 <!-- Expected Goals Table -->
-                <div id="expectedGoalsTable" class="ranking-table">
+                <section id="expectedGoalsTable" class="ranking-table">
                     <h3>Expected Goals (xG) </h3>
                     <table>
                         <thead>
@@ -155,7 +155,7 @@
                             </tr>
                         </tfoot>
                     </table>
-                </div>
+                </section>
 
                 <!-- Expected Assists Table -->
                 <div id="expectedAssistsTable" class="ranking-table">
