club-details.html

--- a/club-details.html
+++ b/club-details.html
@@ -20,7 +20,7 @@
             <section class="club-header">
                 <section class="left-side">
                     <section class="club-details">
-                        <img loading="lazy" id="clubLogo" src="assets/imgs/logos/placeholder.png" alt="Club Logo" class="club-logo">
+                        <img loading="lazy" id="clubLogo" src="" alt="Club Logo" class="club-logo">
                         <section class="club-details-text">
                             <h1 id="clubName"></h1>
                             <p id="clubLeague"></p>
